# ontology-chatbot

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  test.out.txt  test.py
.github/: dependabot.yml
.github/workflows/: ci.yml
artifacts/evaluation/: benchmark_details.jsonl  benchmark_report.json  classification_report.txt  eval_mismatches.jsonl  eval_report.json  gold.jsonl  test_metrics.json
artifacts/fuzzy_bench/: report.md
artifacts/training/: log_history.json
dataset/: test.jsonl  train.jsonl
docs/: CONCEPT.md  data_flow.puml
models/phobert_ner_ft/: config.json  tokenizer_config.json
ontology/: Ontology_AcademicProcedure_v6.owx
resources/: label_map.json
resources/baseline/: flat_db.jsonl
resources/datasets/: intent_seed.jsonl  test.jsonl  train.jsonl
resources/e2e/: cases.jsonl
resources/ontology/: Ontology_AcademicProcedure.owl  Ontology_AcademicProcedure_v8.owx  Ontology_AcademicProcedure_v9.owx  label_map.json  label_map_v8.json  ontology_v9.owx  ontology_v9.properties
src/: __init__.py  config.py  pipeline.py
src/api/: server.py
src/core/: __init__.py  config.py
src/data/: build_dataset.py  templates.py
src/losses/: __init__.py  asymmetric.py  zlpr.py
src/ner/: dataset.py  evaluate.py  inference.py  train.py
src/ont_chatbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ontchatbot/: __init__.py  answer.py  capabilities.py  config.py  graph.py  logging_setup.py  model.py  ner_model.py  nlu.py  ontology.py  pipeline.py  preprocess.py  preprocessor.py  render.py  renderer.py  text.py  tree.py
src/ontchatbot/api/: server.py
src/ontchatbot/baseline/: __init__.py  benchmark.py  docstore.py  figures.py  gold.py  groups.py  retrieval.py
src/ontchatbot/core/: __init__.py  config.py  logging_setup.py  pipeline.py
src/ontchatbot/data/: build_dataset.py  sources.py  templates.py
src/ontchatbot/ner/: dataset.py  encoding.py  evaluate.py  inference.py  preprocessing.py  train.py
src/ontchatbot/ontology/: __init__.py  fuzzy.py  loader.py  queries.py  renderer.py  response.py
src/ontchatbot/scripts/: bench_fuzzy.py  build_dataset.py  build_flat_db.py  build_ontology.py  convert_ct2.py  eval_baseline.py  eval_traversal.py  evaluate.py  migrate_v9.py  serve.py  train.py  upload_hf.py  validate_batch.py  validate_dataset.py  visualize.py
src/ontchatbot/viz/: distributions.py  evaluation.py  training_curves.py
src/ontology/: __init__.py  fuzzy.py  loader.py  queries.py  response.py
src/scripts/: __init__.py  evaluate.py  export_onnx.py  train.py
src/trainers/: __init__.py  asymmetric.py  base.py  zlpr.py
src/utils/: __init__.py  inference.py  label_map.json  labels.py  metrics.py  preprocessing.py
src/viz/: __init__.py  distributions.py  embeddings.py  evaluation.py  training_curves.py
tests/: conftest.py  test_answer.py  test_baseline.py  test_build_dataset.py  test_dataset.py  test_encoding.py  test_export_onnx.py  test_fuzzy.py  test_graph.py  test_inference.py  test_integration.py  test_labels.py  test_loader.py  test_logging.py  test_losses.py  test_metrics.py  test_ner_encoder.py  test_nlu.py  test_ontology.py  test_oracle.py  test_pipeline.py  test_pipeline_chain.py  test_preprocessing.py  test_queries.py  test_render.py  test_renderer.py  test_response.py  test_templates.py  test_trainers.py  test_tree.py  test_viz.py
web/: index.html
webui/: index.html  script.js  style.css
