[project]
name = "ontchatbot"
version = "0.1.0"
description = "Vietnamese academic-procedure chatbot — ViT5 (text→cây JSON) + ontology traversal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "huggingface-hub",
    "transformers",
    "owlready2",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
]

[project.optional-dependencies]
inference = ["onnxruntime"]
train = [
    "torch",
    "accelerate",
    "onnxruntime-gpu",
    "onnxscript",
    "datasets",
    "matplotlib",
    "seaborn",
]

[project.scripts]
serve = "ontchatbot.scripts.serve:main"
build_ontology = "ontchatbot.scripts.build_ontology:main"
eval_traversal = "ontchatbot.scripts.eval_traversal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontchatbot"]

[tool.hatch.build.targets.wheel.force-include]
"resources" = "ontchatbot/resources"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", extra = "train", marker = "sys_platform != 'darwin'" }
]

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
conflicts = [
    [ { extra = "inference" }, { extra = "train" } ],
]
