[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ontchatbot"
version = "0.1.0"
description = "Vietnamese academic-procedure chatbot — BARTpho (text→cây JSON) + ontology traversal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctranslate2>=4.8.0",
    "numpy>=2.4.6",
    "owlready2>=0.50",
    "sentencepiece>=0.2.1",
]

[project.optional-dependencies]
inference = [
    "fastapi[standard]>=0.137.1",
]
train = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "flagembedding>=1.4.0",
    "matplotlib>=3.11.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[[tool.uv.index]]
name = "pytorch-index"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-index" }
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.uv]
conflicts = [
    [{ extra = "train" }, { extra = "inference" } ],
]

[tool.hatch.build.targets.wheel]
packages = ["src/ontchatbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
